Selected active color (per client) fixed navigation overflow

--- a/less/color.less
+++ b/less/color.less
@@ -2,4 +2,4 @@
 
 @background-color: #101010;
 
-@active-color: #ccccff;
+@active-color: #ff9999;
