--- a/less/main.less
+++ b/less/main.less
@@ -24,7 +24,7 @@ body {
 
 
     ul {
-      overflow: auto;
+      overflow: visible;
       list-style-type: none;
       text-align:center;
       position: relative;
@@ -151,6 +151,7 @@ span {
 #main {
     transition: margin-left .5s;
     padding: 16px;
+    color: white;
 }
 
 @media screen and (max-height: 450px) {
